Fixed header on mobile, fixed selector in content

--- a/docroot/sites/all/themes/chm_theme_kit/less/content.less
+++ b/docroot/sites/all/themes/chm_theme_kit/less/content.less
@@ -18,7 +18,7 @@
 
 /* front page styling*/
 .view-latest-updates {
-  ul{
+  .view-content > .item-list > ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -41,6 +41,7 @@
     }
   }
 }
+
 .pane-ptk-base-chm-content-statistics{
   table>tbody>tr>td:nth-child(2){
     position: relative;
@@ -52,6 +53,7 @@
     }
   }
 }
+
 /* Species listing */
 #block-views-species-block-1 {
   .content {
